--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,13 @@ background-color: #5c5858;
 footer{
     color: whitesmoke;
 }
+
+.weather-main{
+     border: 2px solid rgba(128, 128, 128, 0.5); 
+    padding: 80px; 
+    border-radius: 10px; 
+    background-color: rgba(255, 255, 255, 0.2); 
+    width: fit-content; 
+    margin-left: 40px; 
+    margin-top: 40px;
+}
