--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
   border-radius: 30px;
   padding-left: 20px;
   background-color: #f0eded;
-
   border-width: 0px;
 }
 
@@ -28,52 +27,160 @@ body {
   color: white;
   border-width: 0px;
 }
+
 .search-button:hover {
   background-color: #5c5858;
 }
 
-.current-weather {
-  color: whitesmoke;
-  font-family: sans-serif;
-  
-}
-
-footer {
-  color: whitesmoke;
-  font-family: sans-serif;
+.weather-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 40px 40px 0px 40px;
+  padding-left: 80px;
 }
 
 .weather-main {
-  border: 2px solid rgba(128, 128, 128, 0.5);
+  border: 1px solid rgba(128, 128, 128, 0.5);
   padding-left: 20px;
-  padding-right: 300px;
+  padding-right: 50px;
   padding-bottom: 100px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.2);
+  color: whitesmoke;
+  font-family: sans-serif;
   width: fit-content;
-  margin-left: 40px;
-  margin-top: 40px;
+}
 
+.current-weather {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 30px;
 }
 
 .current-temperature {
-position: absolute;
-  right: 800px;
-  top: 30%;
-  display: flex;
- font-size: 70px;
+  font-size: 80px;
   text-align: right;
+  font-family: sans-serif;
+  margin-bottom: 90px;
+  margin-top: 70px;
+  
+}
+.current-temperature-value{
+  margin-right: 25px;
+
+}
+
+.current-temperature-unit {
+  font-size: 30px;
+  margin-left: 5px;
+  position: relative;
+  top: -128px;
+}
+.current-temperature-icon {
+  position: relative;
+  top: -8px;
+  font-size: 60px;
+  margin-left: -20px;
+}
+
+.current-city {
+  margin-top: 80px;
+  font-size: 30px;
   font-family: sans-serif;
 }
 
-.current-city{
-    margin-top: 60px;
-    font-size: 40px;
-    font-family: sans-serif;
+.current-details {
+  margin-top: 80px;
+  font-size: 20px;
+  margin-left: 180;
+   
 }
 
-.current-details{
-    margin-top: 30px;
-    font-size: 15px;
+.forecast-container {
+  border: 1px solid rgba(128, 128, 128, 0.5);
+  background-color: rgba(128, 128, 128, 0.3);
+  border-radius: 10px;
+  padding: 30px;
+  padding-left: 50px;
+  width: 300px;
+ margin-right: 300px;
+ 
 }
 
+.forecast {
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.forecast:last-child {
+  margin-bottom: 0;
+}
+
+.day {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 5px;
+}
+
+.forecast-detail {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.forecast-detail img {
+  width: 40px;
+  height: auto;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  font-family: sans-serif;
+  margin-top: 70px;
+}
+ 
+ 
+.forecast-container {
+  border: 1px solid rgba(128, 128, 128, 0.5);
+  background-color: rgba(128, 128, 128, 0.3);
+  border-radius: 10px;
+  padding: 30px;
+  padding-left: 50px;
+  width: 300px;
+  margin-left: 40px;
+}
+
+.forecast {
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.forecast:last-child {
+  margin-bottom: 0;
+}
+
+.day {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 5px;
+}
+
+.forecast-detail {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.forecast-detail img {
+  width: 40px;
+  height: auto;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  font-family: sans-serif;
+  margin-top: 70px;
+}
